# ore-miner-delegation

./: Cargo.toml  rust-toolchain.toml
src/: boost_v3.rs  consts.rs  delegate_boost.rs  delegate_boost_v2.rs  delegate_stake.rs  error.rs  global_boost.rs  init_delegate_boost.rs  init_delegate_boost_v2.rs  init_delegate_stake.rs  instruction.rs  lib.rs  loaders.rs  migrate_delegate_boost_to_v2.rs  mine.rs  open_managed_proof.rs  open_managed_proof_boost.rs  pda.rs  processor.rs  state.rs  undelegate_boost.rs  undelegate_boost_v2.rs  undelegate_stake.rs  utils.rs
src/processor/: close_delegate_boost_v2.rs  delegate_boost.rs  delegate_boost_v2.rs  delegate_stake.rs  init_delegate_boost.rs  init_delegate_boost_v2.rs  init_delegate_stake.rs  migrate_delegate_boost_to_v2.rs  mine.rs  mod.rs  open_managed_proof.rs  open_managed_proof_boost.rs  register_global_boost.rs  rotate_global_boost.rs  undelegate_boost.rs  undelegate_boost_v2.rs  undelegate_stake.rs  update_miner_authority.rs
tests/: test.rs
