[package]
name = "ore-miner-delegation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ore_miner_delegation"

[features]
no-entrypoint = []
default = []

[dependencies]
bytemuck = "1.16.0"
num_enum = "0.7.2"
solana-program = "1.18.14"
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
ore = { path = "../ore-projects/ore", package = "ore-program", features = ["no-entrypoint"]}
mpl-token-metadata = "4.1.2"

[dev-dependencies]
solana-program-test = "1.18.14"
solana-sdk = "1.18.14"
tokio = { version = "1.37.0", features = ["full"] }
