[package]
name = "ore-miner-delegation"
version = "0.7.3"
edition = "2021"
description = "Ore miner delegate for delegate staking."
license = "Apache-2.0"
repository = "https://github.com/Kriptikz/ore-miner-delegation"
keywords = ["solana", "crypto", "mining", "program"]

[lib]
crate-type = ["cdylib", "lib"]
name = "ore_miner_delegation"

[features]
no-entrypoint = []
default = []

[dependencies]
bytemuck = "1.18.0"
num_enum = "0.7.2"
solana-program = "1.18.14"
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
ore-boost-api = "=0.2.0"
ore-api = "=2.2.0"
ore-utils = "=2.1.8"
drillx = "2.1.0"
mpl-token-metadata = "4.1.2"
thiserror = "1.0.57"
steel = { version = "1.3.0", features = ["spl"] }

[dev-dependencies]
solana-program-test = "1.18.14"
solana-sdk = "1.18.14"
tokio = { version = "1.37.0", features = ["full"] }
