[package]
name = "ore-miner-delegation"
version = "0.10.0"
edition = "2021"
description = "Ore miner delegate for delegate staking."
license = "Apache-2.0"
repository = "https://github.com/Kriptikz/ore-miner-delegation"
keywords = ["solana", "crypto", "mining", "program"]

[lib]
crate-type = ["cdylib", "lib"]
name = "ore_miner_delegation"

[features]
no-entrypoint = []
default = []

[dependencies]
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"
num_enum = "0.7.2"
solana-program = "^2.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }
ore-boost-api = { path = "../ore-boost/api" }
ore-api = "3.6.0"
drillx = { version = "2.2", features = ["solana"] }
mpl-token-metadata = "5.1.0"
thiserror = "1.0.57"
steel = { version = "4.0", features = ["spl"] }


[dev-dependencies]
solana-program-test = "^2.1"
solana-sdk = "^2.1"
tokio = { version = "1.37.0", features = ["full"] }
